\name{limpanews}
\title{limpa News}
\encoding{UTF-8}


\section{Version 0.99.9 (2025-03-23)}{\itemize{
\item
New function plotMDSUsingSEs().
}}


\section{Version 0.99.8 (2025-03-22)}{\itemize{
\item
Add Mengbo Li as joint maintainer.
}}


\section{Version 0.99.7 (2025-03-21)}{\itemize{
\item
New argument `chunk` for dpcQuant() and dpcImpute().

\item
dpcImpute() now passes the `verbose` argument to peptides2Proteins().

\item
Add more background information to the vignette, including references for DIA-NN, Spectronaut and MaxQuant.
Add mention of voomaLmFitWithImputation().

\item
Bug fix to starting values in peptides2Proteins() for single-peptide proteins.
}}


\section{Version 0.99.6 (2025-03-11)}{\itemize{
\item
expTiltByColumns() is now more robust for datasets with very few rows, especially when the column variance is exactly zero by chance.
It originally assumed that the number of rows would always be large.
This also improves the robustness of imputeByExpTilt().

\item
peptides2Proteins() now runs imputeByExpTilt() on the whole dataset in order to get starting values for each protein.
This improves speed slightly and makes the starting values more robust for large datasets with many NAs.

\item
readDIANN() now supports DIA-NN output in either tsv or Parquet formats.
}}


\section{Version 0.99.5 (2025-02-25)}{\itemize{
\item
New functions dpcImpute() and dpcImputeHyperparam() to facilitate imputation and differential expression analysis at the peptide level.
This may be needed for phosphoproteomics and analogous applications.
}}


\section{Version 0.99.4 (2025-02-15)}{\itemize{
\item
Package title changed to "Quantification and Differential Analysis of Proteomics Data", and package description expanded.

\item
New function plotProtein(), to plot the quantifications for a given protein with error bars.

\item
Cleanup annotation output from dpcQuant() to remove peptide-level annotation columns

\item
dpc() now outputs `n.detected` for each peptide.

\item