@@ -1,7 +1,7 @@
 ---
 title: Analyzing mass spectrometry data with limpa
 author: "Mengbo Li and Gordon K. Smyth"
-date: "First version 30 December 2024, Last revised 20 March 2025"
+date: "First version 30 December 2024, Last revised 25 March 2025"
 abstract: >
   Mass spectrometry is a powerful tool in biomedical research. 
   Advancements in label-free methods and MS instruments have enabled high-throughput proteomics profiling of biological samples with the increasingly deeper coverage of the proteome, but missing values are still ubiquitous in MS-based proteomics data.
@@ -84,14 +84,17 @@ plotDPC(dpcfit)
 ```
 
 Then we use the DPC to quantify the protein log2-expression values, using the DPC to represent the missing values.
-There are no longer any missing values, and the samples now cluster into groups:
 ```{r dpcQuant}
 y.protein <- dpcQuant(y.peptide, "Protein", dpc=dpcfit)
-plotMDS(y.protein)
+```
+There are no longer any missing values, and the samples now cluster into groups.
+The `plotMDSUsingSEs()` function is similar to `plotMDS()` in the limma package, but takes account of the standard errors generated by `dpcQuant()`.
+```{r plotMDS}
+plotMDSUsingSEs(y.protein)
 Group <- factor(y.peptide$targets$Group)
 Group.color <- Group
 levels(Group.color) <- c("blue","red")
-plotMDS(y.protein, pch=16, col=as.character(Group.color))
+plotMDSUsingSEs(y.protein, pch=16, col=as.character(Group.color))
 ```
 
 Finally, we conduct a differential expression analysis using the limma package.
